[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/General/GlowPixel.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Shield.png" type="Texture" id=2]
[ext_resource path="res://Assets/Player/PlayerBody.png" type="Texture" id=3]
[ext_resource path="res://Assets/Player/Lance.png" type="Texture" id=4]
[ext_resource path="res://src/Player.gd" type="Script" id=5]
[ext_resource path="res://src/LancePivot.gd" type="Script" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 1.82122
height = 24.716

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.17587
height = 16.5149

[sub_resource type="Animation" id=3]
resource_name = "GunAttack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LancePivot/Lance:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -3 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"

[node name="Player" type="KinematicBody2D"]
position = Vector2( 24.2145, 118.854 )
script = ExtResource( 5 )

[node name="LancePivot" type="Area2D" parent="."]
script = ExtResource( 6 )

[node name="Lance" type="Sprite" parent="LancePivot"]
position = Vector2( 8.222, 3.82211 )
rotation = -3.14159
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
centered = false
flip_h = true
flip_v = true

[node name="LanceHitBox" type="CollisionShape2D" parent="LancePivot"]
visible = false
position = Vector2( 4.62336, -15.6052 )
shape = SubResource( 1 )

[node name="LanceShadow" type="ColorRect" parent="LancePivot"]
margin_left = 2.10061
margin_top = -3.203
margin_right = 7.10061
margin_bottom = 1.797
color = Color( 0.0627451, 0.0431373, 0.0431373, 0.317647 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerBody" type="Sprite" parent="."]
position = Vector2( 0.127701, 3.58693 )
texture = ExtResource( 3 )

[node name="HeadGlow" type="Light2D" parent="PlayerBody"]
position = Vector2( 0.996838, -7.33889 )
scale = Vector2( 2.10131, 2.17563 )
texture = ExtResource( 1 )
color = Color( 0.690196, 0.678431, 0.972549, 1 )

[node name="PlayerHitBox" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.19056, 4.96063 )
shape = SubResource( 2 )

[node name="Shield" type="Sprite" parent="."]
position = Vector2( -3.60713, 1.91854 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GunAttack = SubResource( 3 )
anims/idle = SubResource( 4 )
